<resources>
    <string name="app_name">Будильник</string>
    <string name="melody1">Melody 1</string>
    <string name="melody2">Melody 2</string>
    <string name="melody3">Melody 3</string>
    <string name="melody4">Melody 4</string>
    <string name="melody5">Melody 5</string>
    <string name="melody6">Ship alarm</string>
    <string name="melody7">Banjo</string>
    <string name="melody8">Morning</string>
    <string name="melody9">Simple</string>
    <string name="melody10">Fitness</string>
    <string name="melody11">Medieval</string>
    <string name="melody12">Introduction</string>
    <string name="main_color">Осн. цвет</string>
    <string name="second_color">Доп. цвет</string>
    <string name="all_alarms_off">Все сигналы\nвыключены</string>
    <string name="add">add</string>
    <string name="delete">delete</string>
    <string name="timer">Таймер</string>
    <string name="stopwatch">Секундомер</string>
    <string name="new_signal">Новый сигнал</string>
    <string name="confirm">confirm</string>
    <string name="signal_name">Название сигнала</string>
    <string name="cancel">cancel</string>
    <string name="settings">Настройки</string>
    <string name="melody_input">Мелодия:</string>
    <string name="classic">Classic</string>
    <string name="play_melody">play melody</string>
    <string name="change_melody">Сменить мелодию</string>
    <string name="vibration">Вибрация</string>
    <string name="repeats_count">Количество повторов:</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="inf">Inf</string>
    <string name="interval_input">Интервал раз в</string>
    <string name="_10">10</string>
    <string name="min">мин.</string>
    <string name="customize">Кастомизация</string>
    <string name="wallpapers_input">Обои:</string>
    <string name="wallpapers_change">Сменить обои</string>
    <string name="color_theme_input">Цветовая тема:</string>
    <string name="theme_change">Сменить тему</string>
    <string name="repeat_caps">ПОВТОР</string>
    <string name="off_all_alarms">Выключить все будильники</string>
    <string name="volume_off">volume_off</string>
    <string name="error_is_exist">Ошибка: Такой элемент уже существует</string>
    <string name="wallpaper1">wallpaper1</string>
    <string name="wallpaper2">wallpaper2</string>
    <string name="wallpaper3">wallpaper3</string>
    <string name="wallpaper4">wallpaper4</string>
    <string name="wallpaper5">wallpaper5</string>
    <string name="wallpaper6">wallpaper6</string>
    <string name="wallpaper7">wallpaper7</string>
    <string name="wallpaper8">wallpaper8</string>
    <string name="wallpaper9">wallpaper9</string>
    <string name="wallpaper10">wallpaper10</string>
    <string name="theme">Theme</string>
</resources>